# pupen_app

./: .gitignore  build_win.txt  main.py  oleg.kv  pyproject.toml
