[tool.poetry]
name = "speech2data"
version = "0.1.0"
description = ""
authors = ["Oleg Pepeg <bakarbyikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
kivy = {extras = ["base"], version = "^2.3.0"}
kivy-examples = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
